@@ -1,9 +1,9 @@
 #define LIBENCLOUD_DISABLE_TRACE  // disable heave tracing
 #include <QSslCertificate>
 #include <QVariantMap>
+#include <encloud/Utils>
 #include <common/common.h>
 #include <common/config.h>
-#include <common/utils.h>
 #include <setup/qcc/setupmsg.h>
 
 // use only to wrap upper-level methods, otherwise duplicates will be emitted
