@@ -6,6 +6,9 @@ libencloud 0.7:
 	- api: new Config API (json)
 	- api: rename '/api_v1' => '/api/v1'
 	- client: new get(), post() functions
+	- utils: interface is now public
+	- crypto: interface is now public, added new functions certToString(),
+	  p12SaveCa(), p12SaveCert(), p12SaveKey()
 	- config: "init"/"op" under new "ssl" key, handle absolute and relative paths
 	- setup: avoid reusing client objects to prevent QNetworkAccessManager from
 	  caching CA certificates
